--- a/challenge_3/index.html
+++ b/challenge_3/index.html
@@ -6,7 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Bread Recipe</title>
+    <title>Courier</title>
 </head>
 
 <body>
+
+
+<div class="wrapper">
+   <div class="header">
+        <h1>COURIER</h1>
+    </div>
+</div>
+
+<div class="underhead">
+    <h2 class="lo">LO-FI AESTHETIC SINCE 1955</h2>
+</div>
+
+<div class="section3">
+    <div class="bodycopy">
+        <p>Courier is a monospaced slab serif typeface designed to resemble the output from a strike-on typewriter. The typeface was designed by Howard "Bud" Kettler in 1955, and it was later redrawn by Adrian Frutiger for the IBM Selectric Composer series of electric typewriters. Kettler was once quoted about how the name was chosen. The font was nearly released with the name "Messenger." After giving it some thought, Kettler said, "A letter can be just an ordinary messenger, or it can be the courier, which radiates dignity, prestige, and stability."</p>
+    </div>
+    <div class="ptsize">
+        <p class="fivept">monospace 50pt</p>
+        <p class="fourpt">monospace 30pt</p>
+        <p class="thirtypt">monospace at 20pt</p>
+        <p class="twelvept">monospace at 12pt</p>
+        <p class="eightpt">monospace at 8pt</p>
+    </div>
+</div>
+
+<div class="flex">
+    <div class="regular">
+        <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
+    </div>
+     <div class="italic">
+        <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
+    </div>
+     <div class="bold">
+        <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
+    </div>
+</div>
+
+<div class="wrapper2">
+    <div class="glyphs">
+        1234567890 !@#$%^&amp;*()
+    </div>
+</div>
+
+
+</body>
+</html>
