--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -22,77 +22,110 @@
 <!--Top Ten -->
 <div class="flex mt6">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/odesza.jpeg">
     </div>    
     <div class="w-40 flw-80 flex flex-column justify-start pl4 nt5">
-        <h3 class="f1 courier flex underline grow">Higher Ground</h3>
-        <p class="avenir flex justify-center ml5 pl4 tr nt4">Odesza ft. Naomi Wild <br> Run time: 3:35</p>
+        <h3 class="f1 courier flex underline grow hover-orange">1.Higher Ground</h3>
+        <p class="avenir flex justify-end mr4 pr2 tr nt4">Odesza ft. Naomi Wild <br> Run time: 3:35</p>
     </div>
 </div>
 
 <!--Needed Me - Rihanna -->
 <div class="flex mt7 ml5">   
-    <div class="w-100nflex flex-column nr7 nt5">
-        <h3 class="f1 courier underline grow flex justify-end">Needed Me</h3>
-        <p class="avenir nt4 flex justify-center ml7">Rihanna <br> Run time: 3:11</p>
+    <div class="w-100 flex flex-column nr7 nt5">
+        <h3 class="f1 courier underline grow hover-orange flex justify-end">2.Needed Me</h3>
+        <p class="avenir nt4 flex justify-center ml6 pl3">Rihanna <br> Run time: 3:11</p>
     </div>
      <div class="w-100 flw-100 flex justify-center mr6">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/rihanna.png">
     </div>
 </div>
 
 <!--Homemade Dynamite -->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/lorde.jpg">
     </div>    
     <div class="w-50 flex flex-column justify-start pl4 nt5">
-        <h3 class="f1 courier flex underline grow">Homemade Dynamite</h3>
-        <p class="avenir flex justify-center ml5 pl5 tr nt4">Lorde ft. Khalid, Post Malone, Sza <br> Run time: 3:34</p>
+        <h3 class="f1 courier flex underline grow hover-orange">3.Homemade Dynamite</h3>
+        <p class="avenir flex justify-end mr5 tr nt4">Lorde ft. Khalid, Post Malone, Sza <br> Run time: 3:34</p>
     </div>
 </div>
 
 <!--Purple Yellow Red and Blue-->
 <div class="flex mt7">   
     <div class="w-60 flex flex-column nr7 nt5">
-        <h3 class="f1 courier underline grow flex justify-end">Purple Yellow Red<br> and Blue</h3>
-        <p class="avenir nt4 flex justify-center mr5 pr3">Portugal. The Man <br> Run time: 4:11</p>
+        <h3 class="f1 courier underline grow hover-orange flex justify-end">4.Purple Yellow Red<br> and Blue</h3>
+        <p class="avenir nt4 flex justify-center mr6 pr5">Portugal. The Man <br> Run time: 4:11</p>
     </div>
      <div class="w-40 flex justify-end pr5">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-4" src="img/portugal.jpg">
     </div>
 </div>
 
 <!--Gooey-->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/animals.jpg">
     </div>    
     <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
-        <h3 class="f1 courier flex underline grow">Gooey</h3>
-        <p class="avenir flex justify-start ml4 pl2 tr nt4">Glass Animals <br> Run time: 4:49</p>
+        <h3 class="f1 courier flex underline grow hover-orange">5.Gooey</h3>
+        <p class="avenir flex justify-start ml5 pl4 tr nt4">Glass Animals <br> Run time: 4:49</p>
     </div>
 </div>
   
 <!--Fetish-->
 <div class="flex mt7">   
     <div class="w-60 flex flex-column nr7 nt5">
-        <h3 class="f1 courier underline grow flex justify-end mr4">Fetish</h3>
-        <p class="avenir nt4 flex justify-end mr5 pr4">Selena Gomez<br> ft. Gucci Mane <br> Run time: 3:06</p>
+        <h3 class="f1 courier underline grow hover-orange flex justify-end mr5 pr3">6.Fetish</h3>
+        <p class="avenir nt4 flex justify-end mr5 pr4">Selena Gomez ft. Gucci Mane <br> Run time: 3:06</p>
     </div>
      <div class="w-40 flex justify-end pr5">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/selena.jpg">
     </div>
 </div>
 
 <!--Lost You-->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img src="http://placecorgi.com/260/260">
+        <img class="shadow-5" src="img/zedsdead.jpg">
     </div>    
     <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
-        <h3 class="f1 courier flex underline grow">Lost You</h3>
-        <p class="avenir flex justify-start ml4 pl2 tr nt4">Zeds dead ft Twin Shadow,<br> D’Angelo Lacey<br> Run time: 3:38</p>
+        <h3 class="f1 courier flex underline grow hover-orange">7.Lost You</h3>
+        <p class="avenir flex justify-start ml5 pl3 tr nt4">Zeds dead ft Twin Shadow,<br> D’Angelo Lacey<br> Run time: 3:38</p>
+    </div>
+</div>
+
+<!--Plastic Beach -->
+<div class="flex mt7 ml5">   
+    <div class="w-100 flex flex-column nr7 nt5">
+        <h3 class="f1 courier underline grow hover-orange flex justify-end">8.Plastic Beach</h3>
+        <p class="avenir nt4 flex justify-center ml5 pl3">Gorillaz ft. Mick Jonas, Paul Simonon<br> Run time: 3:47</p>
+    </div>
+     <div class="w-100 flw-100 flex justify-center mr5 pr5">
+        <img class="shadow-5" src="img/gorillaz.jpg">
+    </div>
+</div>
+
+<!--Lost You-->
+<div class="flex mt7">
+    <div class="w-25 ml3 nr6 flex justify-end">
+        <img class="shadow-5" src="img/macklmore.jpg">
+    </div>    
+    <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
+        <h3 class="f1 courier flex underline grow hover-orange ml3">9.Over It</h3>
+        <p class="avenir flex justify-start ml4 pl3 tr nt4">Macklemore ft. Donna Missal <br> Run time: 3:38</p>
+    </div>
+</div>
+
+<!--Reaching Out -->
+<div class="flex mt7 ml5 mb6">   
+    <div class="w-100 flex flex-column nr7 nt5">
+        <h3 class="f1 courier underline grow hover-orange flex justify-end">10.Reaching Out</h3>
+        <p class="avenir nt4 flex justify-center mr5">Bassnectar<br> Run time: 4:54</p>
+    </div>
+     <div class="w-100 flw-100 flex justify-center mr5 pr5">
+        <img class="shadow-5" src="img/bassnectar.jpg">
     </div>
 </div>
 
