--- a/challenge_4/index.html
+++ b/challenge_4/index.html
@@ -22,7 +22,7 @@
 <!--Top Ten -->
 <div class="flex mt6">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img class="shadow-5" src="img/odesza.jpeg">
+        <img class="shadow-5" src="img/odesza.jpeg" alt="Odesza Album Cover">
     </div>    
     <div class="w-40 flw-80 flex flex-column justify-start pl4 nt5">
         <h3 class="f1 courier flex underline grow hover-orange">1.Higher Ground</h3>
@@ -37,14 +37,14 @@
         <p class="avenir nt4 flex justify-center ml6 pl3">Rihanna <br> Run time: 3:11</p>
     </div>
      <div class="w-100 flw-100 flex justify-center mr6">
-        <img class="shadow-5" src="img/rihanna.png">
+        <img class="shadow-5" src="img/rihanna.png" alt="Anti Album Cover">
     </div>
 </div>
 
 <!--Homemade Dynamite -->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img class="shadow-5" src="img/lorde.jpg">
+        <img class="shadow-5" src="img/lorde.jpg" alt="Lorde Album Cover">
     </div>    
     <div class="w-50 flex flex-column justify-start pl4 nt5">
         <h3 class="f1 courier flex underline grow hover-orange">3.Homemade Dynamite</h3>
@@ -59,14 +59,14 @@
         <p class="avenir nt4 flex justify-center mr6 pr5">Portugal. The Man <br> Run time: 4:11</p>
     </div>
      <div class="w-40 flex justify-end pr5">
-        <img class="shadow-4" src="img/portugal.jpg">
+        <img class="shadow-4" src="img/portugal.jpg" alt="Portugal Album Cover">
     </div>
 </div>
 
 <!--Gooey-->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img class="shadow-5" src="img/animals.jpg">
+        <img class="shadow-5" src="img/animals.jpg" alt="Gooey Album Cover">
     </div>    
     <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
         <h3 class="f1 courier flex underline grow hover-orange">5.Gooey</h3>
@@ -81,14 +81,14 @@
         <p class="avenir nt4 flex justify-end mr5 pr4">Selena Gomez ft. Gucci Mane <br> Run time: 3:06</p>
     </div>
      <div class="w-40 flex justify-end pr5">
-        <img class="shadow-5" src="img/selena.jpg">
+        <img class="shadow-5" src="img/selena.jpg" alt="Fetish Album Cover">
     </div>
 </div>
 
 <!--Lost You-->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img class="shadow-5" src="img/zedsdead.jpg">
+        <img class="shadow-5" src="img/zedsdead.jpg" alt="Lost You Album Cover">
     </div>    
     <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
         <h3 class="f1 courier flex underline grow hover-orange">7.Lost You</h3>
@@ -103,14 +103,14 @@
         <p class="avenir nt4 flex justify-center ml5 pl3">Gorillaz ft. Mick Jonas, Paul Simonon<br> Run time: 3:47</p>
     </div>
      <div class="w-100 flw-100 flex justify-center mr5 pr5">
-        <img class="shadow-5" src="img/gorillaz.jpg">
+        <img class="shadow-5" src="img/gorillaz.jpg" alt="Plastic Beach Album Cover">
     </div>
 </div>
 
-<!--Lost You-->
+<!--Over It-->
 <div class="flex mt7">
     <div class="w-25 ml3 nr6 flex justify-end">
-        <img class="shadow-5" src="img/macklmore.jpg">
+        <img class="shadow-5" src="img/macklmore.jpg" alt="Over It Album Cover">
     </div>    
     <div class="w-50 flex flex-column justify-start ml5 pl4 nt5">
         <h3 class="f1 courier flex underline grow hover-orange ml3">9.Over It</h3>
@@ -125,7 +125,7 @@
         <p class="avenir nt4 flex justify-center mr5">Bassnectar<br> Run time: 4:54</p>
     </div>
      <div class="w-100 flw-100 flex justify-center mr5 pr5">
-        <img class="shadow-5" src="img/bassnectar.jpg">
+        <img class="shadow-5" src="img/bassnectar.jpg" alt="Unlimited Album Cover">
     </div>
 </div>
 
